--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,7 +23,8 @@ android {
 }
 
 dependencies {
-    implementation project(":library")
+//    implementation project(":library")
+    implementation 'com.github.atomx2u:LiveEventBus:0.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
